# Fair-Code

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  METRICS.md  README.md  ROADMAP.md  SECURITY.md  explainer.html  index.html  profiler.html  pyproject.toml  requirements.txt  unfair.py
.github/: PULL_REQUEST_TEMPLATE.md  bug_report.yml  dependabot.yml
AI Fair Recruitment/: fair.py  unfair.py
Benefits Denial/: fair.py  unfair.py
COMPAS/: fair.py  unfair.py
German Credit Lending/: fair.py  unfair.py
Healthcare Readmission/: fair.py  unfair.py
Insurance Denial/: fair.py  unfair.py
assets/: explainers-data.js  explainers-ui.js  explainers.css  profiler-engine.js  profiler-ui.js  profiler.css
explainers/: ai-hallucinations.md  ai-objectivity-myth.md  calibration.md  confounding-variable.md  counterfactual-fairness.md  data-leakage.md  demographic-parity.md  disparate-impact.md  disparate-treatment.md  distribution-shift.md  equalized-odds.md  fairness-metric-conflicts.md  feedback-loop-bias.md  how-ai-detects-patterns.md  individual-fairness.md  label-bias.md  ml-bias.md  neural-networks.md  predictive-parity.md  proxy-entanglement.md  proxy-variables.md  reinforcement-learning.md  sampling-bias  sampling-bias.md  shap-values.md
faircode/: SPEC.md  __init__.py  __main__.py  cli.py  detect.py  profiler.py  report.py
notebooks/: 01_compas_bias_audit.ipynb  02_hiring_bias_audit.ipynb  03_german_credit_bias_audit.ipynb  04_insurance_denial_bias_audit.ipynb  05_benefits_denial_bias_audit.ipynb
tests/: test_profiler.py
(+6 files in other folders)
